# MOpt

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mopt/: __init__.py  base_classes.py
src/mopt/autodiff/: __init__.py  torch_adapter.py
src/mopt/linear/: __init__.py  problem.py  simplex.py
src/mopt/nonlinear/: __init__.py  finite_diff.py  gradient_descent.py  line_search.py  newton.py  problem.py  trust_region.py
tests/: test_base_optimizer.py  test_import.py  test_line_search.py  test_nonlinear_problem.py  test_nonlinear_solvers.py  test_simplex.py  test_torch_adapter.py  test_trust_region.py
