[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "mopt"
version = "0.0.1"
authors = [
  { name = "Trần Bảo Minh", email = "trminh06.work@gmail.com" },
]
description = "Mathematical optimization solvers: linear programming, nonlinear programming, and more"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/Trminh06-work/MOpt"
Issues = "https://github.com/Trminh06-work/MOpt/issues"
